.metals/.reports/metals/2023-09-13/r_scala-toplevel-mtags_23-47-38-040
id: file://<WORKSPACE>/Main.scala:[7..7) in Input.VirtualFile("file://<WORKSPACE>/Main.scala", "object ")
file://<WORKSPACE>/Main.scala:1: error: expected identifier; obtained eof
object 
       ^